# event-countdown-api

./: .env  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
docker/: docker-compose.yml
migrations/2025-06-10-061909_create_event/: up.sql
migrations/2025-06-10-062023_create_user/: up.sql
migrations/2025-06-10-062041_create_comment/: up.sql
migrations/2025-06-10-062047_create_tag/: up.sql
migrations/2025-06-10-062052_create_event_tag/: down.sql  up.sql
migrations/2025-06-10-062101_create_favorite/: down.sql  up.sql
migrations/2025-06-10-062109_create_report/: up.sql
migrations/2025-06-13-043405_add_oauth_to_users/: down.sql  up.sql
sql/: reset_dev.sql
src/: lib.rs  main.rs  schema.rs
src/handlers/: admin.rs  auth.rs  comments.rs  events.rs  mod.rs  users.rs
src/middleware/: auth.rs
src/models/: comment.rs  event.rs  event_tag.rs  favorite.rs  mod.rs  report.rs  tag.rs  user.rs
src/services/: auth_service.rs  external_api.rs  mod.rs  oauth_service.rs
src/utils/: database.rs  validation.rs
