[package]
name = "event-countdown-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reset_dev"
path = "src/bin/reset_dev.rs"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "2.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
log = "0.4"
regex = "1.0"
r2d2 = "0.8"
actix-cors = "0.6"
oauth2 = "4.4"
url = "2.4"
base64 = "0.21"
urlencoding = "2.1"

# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
